    - Where necessary added links to bash completion scripts
      to debian/links to reuse bash completion code
    - Removed deprecated "have" mechanism from bash completion scripts.
    - Removed undefined "$filenames" from chdist.bash_completion
    - Split debi.bash_completion off from pkgnames.bash_completion
      and added links for both debi/debc and corrected complete commands

  [ Dominique Dumont ]
  * licensecheck: parse file matching -c regex whatever its mime
    type. Parse postscript with embedded binary (Closes: #803724)
  * licensecheck: --text option is deprecated

  [ Osamu Aoki ]
  * uscan:
    + Start uupdate with --verbose as needed.  (Closes: #350454)
    + Add test_uscan_mangle for testing the mangling rules and pgp signature.
    + Add --download-debversion.  (Closes: #755754)
    + Add pagemangle.  (Closes: #395439, #451051, #538717, #705989, #773390)
    + Add oversionmangle as a part of multiple upstream tarball support.
      (Closes: #458777)
    + Add dirversionmangle with $download-version consideration with detailed
      and sorted reporting of all available URLs.
      (Closes: #363346, #375138, #472065, #516704, #557768, #734748)
    + Add the multiple upstream tarball support and extend the OpenPGP support
      with new watch line options: component, compression, repack, pgpmode,
      versionmode, decompress.  (Closes: #526443, #531321, #549178, #731725,
      #738977, #778723, #800704)
    + Updated manpage contents and build it from POD.  (Closes: #409094,
      #415680, #573631, #733272, #775526, #790629, #796293, #797787)
    + Improve FTP listing handling. (Closes: #696492)
    + Add the --overwrite-download, --skip-signature, and similar options
      to reorganize behavior around existing downloaded files.
      (Closes: #532182, #740366)
    + Update filenamemangle to support the version pattern matching in any
      position of the URL and remove .download hack which breaks 