@@ -25,7 +25,6 @@
 /usr/share/bash-completion/completions/pkgnames  /usr/share/bash-completion/completions/dcontrol
 /usr/share/bash-completion/completions/pkgnames  /usr/share/bash-completion/completions/grep-excuses
 /usr/share/bash-completion/completions/pkgnames  /usr/share/bash-completion/completions/rc-alert
-/usr/share/bash-completion/completions/pkgnames  /usr/share/bash-completion/completions/bts
 /usr/share/bash-completion/completions/pkgnames  /usr/share/bash-completion/completions/whodepends
 /usr/share/bash-completion/completions/pkgnames  /usr/share/bash-completion/completions/dget
 /usr/share/bash-completion/completions/pkgnames  /usr/share/bash-completion/completions/pts-subscribe
